# symmetric

./: .gitignore  =74.1.2  README.md  pre-commit-config.yaml  pyproject.toml
symmetric/: README.md  hello.py  pyproject.toml
